Fix for sending ini and exe files using Google Talk account

Each file transfer is checked for using Google Talk and forbidden extensions.
In that case, "_" character is appended to suggested file name. For all other
cases transfer process remains the same.

REVIEW: 115463
BUG: 326786
FIXED-IN: 0.8.0